# tetris

./: .gitignore  Dockerfile  Makefile  README.md  deploy.yml  dev.yml  docker-compose.yml  notes.md  tetris.yml
api/: Dockerfile  __init__.py  config.py  constants.py  db.py  deploy.py  dev.Dockerfile  pyproject.toml
db/: Dockerfile  postgres.sql  schema.sql
nginx/: nginx.conf
tetris/: Dockerfile  Dockerfile_dev  dev.Dockerfile  package-lock.json  package.json
tetris/public/: index.html
tetris/src/: Block.js  Board.js  Leaderboard.js  Row.js  Tetriminos.js  constants.js  index.css  index.js  leaderboard.css  pieces.js  scoring.js  tetriminos.js  tetrominos.js
