[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Carlos Giron <cgironalas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.0"
psycopg2 = "^2.7"
flask-sqlalchemy = "^2.3"
uwsgi = "^2.0"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
mypy = "^0.670.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
